--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
 
 						<!-- Posts -->
 							<section class="posts">
-								<article>
+								<<article>
 									<header>
 										<h2><a href="#">Splitter<br /> Tip calculator</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/splitter-preview.png" alt="" /></a>
+									<p>Splitter is a tip calculator that can be used either for yourself or when determing how a large group can split the bill. This project was completed using vanilla HTML, CSS, and JavaScript</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a target="_blank" href="https://tip-calculator-app-main-jade.vercel.app/" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
