--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 						<!-- Posts -->
 							<section class="posts">
-								<<article>
+								<article>
 									<header>
 										<h2><a href="#">Splitter<br /> Tip calculator</a></h2>
 									</header>
